--- a/template.html
+++ b/template.html
@@ -249,6 +249,7 @@
                       </tr>
                     </table>
 
+                    <hr />
                     <table
                       class="blogs"
                       cellspacing="0"
@@ -266,6 +267,8 @@
                         <td class="blog-container">
                           <div class="blog-image">
                             <img
+                              width="250"
+                              height="250"
                               src="https://unsplash.it/200"
                               alt="blogimage"
                             />
@@ -287,6 +290,8 @@
                         <td class="blog-container">
                           <div class="blog-image">
                             <img
+                              width="250"
+                              height="250"
                               src="https://unsplash.it/200"
                               alt="blogimage"
                             />
@@ -308,6 +313,8 @@
                         <td class="blog-container">
                           <div class="blog-image">
                             <img
+                              width="250"
+                              height="250"
                               src="https://unsplash.it/200"
                               alt="blogimage"
                             />
@@ -327,6 +334,7 @@
                       </tr>
                     </table>
 
+                    <hr />
                     <table class="topics" cellspacing="0" cellpadding="0">
                       <tr>
                         <td>
@@ -487,6 +495,7 @@
                       </tr>
                     </table>
 
+                    <hr />
                     <table class="footer" cellspacing="0" cellpadding="0">
                       <tr>
                         <td>
