--- a/template.html
+++ b/template.html
@@ -67,6 +67,11 @@
         text-align: right;
         width: 100%;
       }
+      hr {
+        line-height: 0;
+        padding: 0;
+        font-weight: bold;
+      }
       .topics {
         margin: 0 auto;
       }
@@ -85,19 +90,10 @@
       }
 
       @media screen and (max-width: 1080px) {
-        #viewinbrowser,
-        #gcdclink {
-          float: none !important;
-          display: block !important;
-          text-align: center !important;
-          font-size: 0.8em !important;
-        }
-      }
-
-      @media screen and (max-width: 768px) and (min-width: 678px) {
         .container-table {
           width: 80% !important;
         }
+
         #viewinbrowser,
         #gcdclink {
           float: none !important;
@@ -106,19 +102,13 @@
           font-size: 0.8em !important;
         }
       }
-      @media screen and (max-width: 678px) and (min-width: 600px) {
+      @media screen and (max-width: 810px) and (min-width: 678px) {
         .container-table {
-          width: 90% !important;
-        }
-        #viewinbrowser,
-        #gcdclink {
-          float: none !important;
-          display: block !important;
-          text-align: center !important;
-          font-size: 0.8em !important;
+          width: 95% !important;
         }
       }
-      @media screen and (max-width: 600px) {
+
+      @media screen and (max-width: 678px) {
         * {
           font-size: 0.9rem;
         }
@@ -166,12 +156,25 @@
         .topics {
           text-align: center !important;
         }
-        #social,
+
         #social-icons {
           display: block !important;
           float: none !important;
           text-align: center !important;
           width: 100% !important;
+        }
+        #social,
+        #ratestar {
+          line-height: 1em;
+          display: inline-block !important;
+          float: none !important;
+          width: 25% !important;
+        }
+        #ratestar * {
+          padding: 0 !important;
+        }
+        #ratestar {
+          padding: 0 !important;
         }
         #icons-list li {
           margin: 0 1em 0 0 !important;
@@ -504,14 +507,56 @@
                               style="display:inline-block; float: left;text-align: justify"
                               id="social"
                             >
-                              Connect us on Social Platforms:
+                              Rate this newsletter:
                             </p>
+                            <a href="">
+                              <ul
+                                id="ratestar"
+                                style="list-style: none; float:left; display:inline; width:25%; text-align: center"
+                              >
+                                <li style="display:inline; ">
+                                  <img
+                                    src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
+                                    alt=""
+                                    width="8%"
+                                  />
+                                </li>
+                                <li style="display:inline; ">
+                                  <img
+                                    src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
+                                    alt=""
+                                    width="8%"
+                                  />
+                                </li>
+                                <li style="display:inline; ">
+                                  <img
+                                    src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
+                                    alt=""
+                                    width="8%"
+                                  />
+                                </li>
+                                <li style="display:inline; ">
+                                  <img
+                                    src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
+                                    alt=""
+                                    width="8%"
+                                  />
+                                </li>
+                                <li style="display:inline; ">
+                                  <img
+                                    src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
+                                    alt=""
+                                    width="8%"
+                                  />
+                                </li>
+                              </ul>
+                            </a>
                             <div
                               style="text-align: center;display: inline-block; float: right; width: 40%"
                               id="social-icons"
                             >
                               <ul id="icons-list" style="list-style:none; ">
-                                <li style="display: inline; padding: 0 5px">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a href="https://www.facebook.com/gcdcindore/"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/5d598183-0ebe-437a-a45c-b2f68c1d905f.png"
@@ -519,7 +564,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline; padding: 0 5px">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a href="https://twitter.com/gcdcIndore"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/20b26c35-b020-4ea2-a756-995d9a188cd2.png"
@@ -527,7 +572,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline; padding: 0 5px">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a
                                     href="https://www.instagram.com/gcdcindore/"
                                     ><img
@@ -536,7 +581,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline; padding: 0 5px">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a
                                     href="https://www.linkedin.com/in/google-cloud-developers-community-indore-984651172"
                                     ><img
@@ -545,7 +590,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline; padding: 0 5px">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a href="https://gcdcindore.dev"
                                     ><img
                                       src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-link-48.png"
@@ -553,7 +598,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline; padding: 0 5px">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a
                                     href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
                                     ><img
