--- a/Builder/tempbuilder.html
+++ b/Builder/tempbuilder.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans"
       rel="stylesheet"
     />
+    <script src="index.js"></script>
     <style>
       * {
         line-height: 1.4;
@@ -196,7 +197,7 @@
             <center>
               <table
                 class="container-table"
-                width="50%"
+                width="60%"
                 cellspacing="0"
                 cellpadding="0"
               >
