--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
         <div class="tempbuilder">
           Customize the newsletter by the template
-          <a href="./tempbuilder.html">here</a>.
+          <a href="./Builder/tempbuilder.html">here</a>.
           <span class="tempbuildertooltip"> Coming Soon</span>
         </div>
         <div class="container">
