Template is Mobile Responsive

--- a/Builder/tempbuilder.html
+++ b/Builder/tempbuilder.html
@@ -215,7 +215,13 @@
           margin: 0 1em 0 0 !important;
         }
         .display {
-          width: 100% !important;
+          width: 90% !important;
+        }
+      }
+      @media screen and (max-width: 485px) {
+        #social {
+          font-size: 0.8em !important;
+          text-align: left !important;
         }
       }
     </style>
