--- a/Newsletters/may2019.html
+++ b/Newsletters/may2019.html
@@ -180,6 +180,12 @@
           margin: 0 1em 0 0 !important;
         }
       }
+      @media screen and (max-width: 485px) {
+        #social {
+          font-size: 0.8em !important;
+          text-align: left !important;
+        }
+      }
     </style>
   </head>
   <body>
