--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="tempbuilder">
           Customize the newsletter by the template
           <a href="./Builder/tempbuilder.html">here</a>.
-          <span class="tempbuildertooltip"> Coming Soon</span>
+          <span class="tempbuildertooltip"> OUT NOW</span>
         </div>
         <div class="container">
           <h2>Archives</h2>
