--- a/Builder/tempbuilder.html
+++ b/Builder/tempbuilder.html
@@ -109,6 +109,7 @@
 
       #insert,
       #code,
+      #close,
       #html-copy,
       #html-close {
         display: inline;
@@ -120,7 +121,8 @@
         border-radius: 5px;
         cursor: pointer;
       }
-      #html-close {
+      #html-close,
+      #close {
         background: rgb(255, 0, 43);
       }
 
@@ -679,6 +681,7 @@
       <textarea id="replace" rows="10" cols="80"></textarea>
       <span id="insert">Insert</span>
       <span id="code">Code</span>
+      <span id="close">Close</span>
     </div>
     <div class="html">
       <textarea id="html-code" cols="100" rows="20"></textarea>
