May format minor changes

--- a/Discarded/may2019old.html
+++ b/Discarded/may2019old.html
@@ -211,14 +211,34 @@
                     <!-- Header -->
                     <table class="header" cellspacing="0" cellpadding="0">
                       <!-- Pre-header -->
-
+                      <tr>
+                        <td>
+                          <p style="display:inline-block" id="gcdclink">
+                            You are recieving this mail because you are a member
+                            of
+                            <a
+                              href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
+                              target="_blank"
+                              >GCDC Indore</a
+                            >
+                          </p>
+                          <p
+                            style="display:inline-block; text-align: right; float:right"
+                            id="viewinbrowser"
+                          >
+                            <a href="https://gcdcindore.dev" target="_blank"
+                              >View in Browser</a
+                            >
+                          </p>
+                        </td>
+                      </tr>
                       <!-- Header Image -->
                       <tr>
                         <td>
                           <a href="https://gcdcindore.dev">
                             <img
                               id="header-logo"
-                              src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a383fa84-80d7-4aba-8eb5-94eb75b91d6a.png"
+                              src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/96e1e7e0-0754-4baa-9ea4-b0e48dd07c20.png"
                               alt="GCDC Logo"
                               width="100%"
                           /></a>
@@ -226,11 +246,17 @@
                       </tr>
                       <tr>
                         <td>
-                          <p
-                            style="display:block; text-align: center"
-                            id="date"
-                          >
+                          <p style="display:inline-block;width:49%" id="date">
                             <strong>May, 2019</strong>
+                          </p>
+                          <p
+                            style="display:inline-block;width:49%; text-align: right"
+                          >
+                            <strong
+                              ><a href="https://gcdcindore.dev"
+                                >Archives</a
+                              ></strong
+                            >
                           </p>
                         </td>
                       </tr>
@@ -246,13 +272,12 @@
                       <tr>
                         <td class="blog-container">
                           <div class="blog-image">
-                            <a href="https://cloud.google.com/anthos/">
-                              <img
-                                width="250"
-                                height="250"
-                                src="https://www.arctiq.ca/assets/posts/deploying-google-anthos-gke-on-prem-with-optiva/anthos.png"
-                                alt="Anthos"
-                            /></a>
+                            <img
+                              width="250"
+                              height="250"
+                              src="https://www.arctiq.ca/assets/posts/deploying-google-anthos-gke-on-prem-with-optiva/anthos.png"
+                              alt="Anthos"
+                            />
                           </div>
                           <div class="blog-content">
                             <h3 class="blog-title">Anthos</h3>
@@ -276,13 +301,12 @@
                       <tr>
                         <td class="blog-container">
                           <div class="blog-image">
-                            <a href="https://cloud.google.com/code/docs/"
-                              ><img
-                                width="250"
-                                height="250"
-                                src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/91fa1907-ec60-4e33-ab8d-66d8dabaeabd.png"
-                                alt="Cloud Code"
-                            /></a>
+                            <img
+                              width="250"
+                              height="250"
+                              src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/91fa1907-ec60-4e33-ab8d-66d8dabaeabd.png"
+                              alt="Cloud Code"
+                            />
                           </div>
                           <div class="blog-content">
                             <h3 class="blog-title">Cloud Code</h3>
@@ -305,13 +329,12 @@
                       <tr>
                         <td class="blog-container">
                           <div class="blog-image">
-                            <a href="https://cloud.google.com/run/"
-                              ><img
-                                width="250"
-                                height="250"
-                                src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/676dbc10-a0c6-4e1a-9fd0-4edfea3c0297.png"
-                                alt="Cloud Run"
-                            /></a>
+                            <img
+                              width="250"
+                              height="250"
+                              src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/676dbc10-a0c6-4e1a-9fd0-4edfea3c0297.png"
+                              alt="Cloud Run"
+                            />
                           </div>
                           <div class="blog-content">
                             <h3 class="blog-title">Cloud Run</h3>
@@ -355,7 +378,8 @@
                                     href="https://cloud.google.com/compute/"
                                     target="_blank"
                                     >compute engine</a
-                                  >.
+                                  >
+                                  .
                                 </li>
                                 <li>
                                   <a
@@ -394,7 +418,8 @@
                                     rel="noopener noreferrer"
                                     >5 ML GitHub repositories and Reddit
                                     discussions</a
-                                  >.
+                                  >
+                                  .
                                 </li>
                                 <li>
                                   Give your Machine learning career a kick start
@@ -404,7 +429,8 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >5 courses</a
-                                  >!
+                                  >
+                                  !
                                 </li>
                                 <li>
                                   <a
@@ -494,12 +520,14 @@
                                   >
                                 </li>
                                 <li>
-                                  Don’t forgot to tune into Google I/O 2019 (<a
+                                  Don’t forgot to tune into Google I/O 2019(
+                                  <a
                                     href="https://events.google.com/io/"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >Watch Live</a
-                                  >)
+                                  >
+                                  )
                                 </li>
                                 <li>
                                   Apply to
@@ -589,23 +617,6 @@
                             >
                               <ul id="icons-list" style="list-style:none; ">
                                 <li style="display: inline; padding: 0 5px;">
-                                  <a
-                                    href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
-                                    ><img
-                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a685aa5c-7ab5-4c77-b20e-dc7ff66dc464.png"
-                                      alt="Meetup"
-                                      width="6%"
-                                  /></a>
-                                </li>
-                                <li style="display: inline; padding: 0 5px;">
-                                  <a href="https://gcdcindore.dev"
-                                    ><img
-                                      src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-link-48.png"
-                                      alt="GcdcIndore"
-                                      width="6%"
-                                  /></a>
-                                </li>
-                                <li style="display: inline; padding: 0 5px;">
                                   <a href="https://www.facebook.com/gcdcindore/"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/5d598183-0ebe-437a-a45c-b2f68c1d905f.png"
@@ -639,6 +650,23 @@
                                       width="6%"
                                   /></a>
                                 </li>
+                                <li style="display: inline; padding: 0 5px;">
+                                  <a href="https://gcdcindore.dev"
+                                    ><img
+                                      src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-link-48.png"
+                                      alt="GcdcIndore"
+                                      width="6%"
+                                  /></a>
+                                </li>
+                                <li style="display: inline; padding: 0 5px;">
+                                  <a
+                                    href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
+                                    ><img
+                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a685aa5c-7ab5-4c77-b20e-dc7ff66dc464.png"
+                                      alt="Meetup"
+                                      width="6%"
+                                  /></a>
+                                </li>
                               </ul>
                             </div>
                           </center>
@@ -648,31 +676,10 @@
                         <td>
                           <img
                             id="footer-logo"
-                            src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/96e1e7e0-0754-4baa-9ea4-b0e48dd07c20.png"
+                            src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a383fa84-80d7-4aba-8eb5-94eb75b91d6a.png"
                             alt="GCDC Logo"
                             width="100%"
                           />
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p style="display:inline-block" id="gcdclink">
-                            You are recieving this mail because you are a member
-                            of
-                            <a
-                              href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
-                              target="_blank"
-                              >GCDC Indore</a
-                            >
-                          </p>
-                          <p
-                            style="display:inline-block; text-align: right; float:right"
-                            id="policy"
-                          >
-                            <a style="color:gray" href="#" target="_blank"
-                              >Privacy Policy</a
-                            >
-                          </p>
                         </td>
                       </tr>
                     </table>
