Rate font size increased

--- a/Newsletters/may2019.html
+++ b/Newsletters/may2019.html
@@ -121,14 +121,14 @@
           height: auto !important;
           width: 100% !important;
         }
-        #viewinbrowser,
+        #policy,
         #gcdclink {
           float: none !important;
           display: block !important;
           text-align: center !important;
           font-size: 0.8em !important;
         }
-        #viewinbrowser a,
+        #policy a,
         #gcdclink a {
           font-size: 0.85em;
         }
@@ -169,6 +169,7 @@
           display: inline-block !important;
           float: none !important;
           width: 25% !important;
+          font-size: 0.85em;
         }
         #ratestar * {
           padding: 0 !important;
