Event Summary complete

--- a/index.html
+++ b/index.html
@@ -202,12 +202,11 @@
             </ul>
           </div>
           <div class="promotions">
-            <h3>Find our Promotions here</h3>
+            <h3>Find our Events here</h3>
             <ul>
               <li>
-                <a class="tooltip" href=""
-                  ><span class="tooltiptext">Content Unavailable</span>May
-                  2019</a
+                <a class="tooltip" href="./Events/nextextended.html"
+                  >Cloud Next Extended '19</a
                 >
               </li>
               <li>
