--- a/Events/nextextended.html
+++ b/Events/nextextended.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>GCDC Responsive Template</title>
+    <title>Next Extended'19</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500%7C"
@@ -250,9 +250,9 @@
                       </tr>
                     </table>
 
-                    <hr />
+                    <!-- <hr /> -->
 
-                    <table
+                    <!-- <table
                       class="eventdescription"
                       cellspacing="0"
                       cellpadding="0"
@@ -278,7 +278,7 @@
                           </p>
                         </td>
                       </tr>
-                    </table>
+                    </table> -->
 
                     <hr />
                     
@@ -310,7 +310,7 @@
                                       style="border-radius: 50%"
                                     />
                                     <h3>Dharmesh Vaya</h3>
-                                    <ul style="list-style:none;">
+                                    <!-- <ul style="list-style:none;">
                                       <li
                                         style="display: inline; padding: 0 5px;"
                                       >
@@ -343,7 +343,7 @@
                                             width="6%"
                                         /></a>
                                       </li>
-                                    </ul>
+                                    </ul> -->
                                   </div>
                                   <div class="session">
                                     <h3>Key-points</h3>
@@ -412,7 +412,7 @@
                                       style="border-radius: 50%"
                                     />
                                     <h3>Akash Agarwal</h3>
-                                    <ul style="list-style:none;">
+                                    <!-- <ul style="list-style:none;">
                                       <li
                                         style="display: inline; padding: 0 5px;"
                                       >
@@ -445,7 +445,7 @@
                                             width="6%"
                                         /></a>
                                       </li>
-                                    </ul>
+                                    </ul> -->
                                   </div>
                                   <div class="session">
                                     <h3>Key-points</h3>
@@ -512,7 +512,7 @@
                                       style="border-radius: 50%"
                                     />
                                     <h3>Rajat Jaiswal</h3>
-                                    <ul style="list-style:none;">
+                                    <!-- <ul style="list-style:none;">
                                       <li
                                         style="display: inline; padding: 0 5px;"
                                       >
@@ -545,7 +545,7 @@
                                             width="6%"
                                         /></a>
                                       </li>
-                                    </ul>
+                                    </ul> -->
                                   </div>
                                   <div class="session">
                                     <h3>Key-points</h3>
@@ -609,7 +609,7 @@
                                       style="border-radius: 50%"
                                     />
                                     <h3>Tushar Pal</h3>
-                                    <ul style="list-style:none;">
+                                    <!-- <ul style="list-style:none;">
                                       <li
                                         style="display: inline; padding: 0 5px;"
                                       >
@@ -642,7 +642,7 @@
                                             width="6%"
                                         /></a>
                                       </li>
-                                    </ul>
+                                    </ul> -->
                                   </div>
                                   <div class="session">
                                     <h3>Key-points</h3>
