--- a/Newsletters/may2019.html
+++ b/Newsletters/may2019.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>GCDC Responsive Template</title>
+    <title>GCDC Indore May 2019 Newsletter</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500%7C"
